<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/curPrize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cur_prize"
        android:textAppearance="@style/headingText"
        app:layout_constraintBottom_toTopOf="@+id/curScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/curScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ellipsis"
        android:textAppearance="@style/scoreText"
        app:layout_constraintBottom_toTopOf="@+id/scoreDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curPrize" />

    <View
        android:id="@+id/scoreDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/questionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curScore" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ellipsis"
        android:textAppearance="@style/mediumText"
        app:layout_constraintBottom_toTopOf="@+id/questionDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreDivider" />

    <View
        android:id="@+id/questionDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/answerGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionText" />

    <RadioGroup
        android:id="@+id/answerGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/answerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionDivider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answerA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="answerSelected"
                    android:text="@string/ellipsis"
                    android:textAppearance="@style/mediumText" />

                <RadioButton
                    android:id="@+id/answerC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ellipsis"
                    android:onClick="answerSelected"
                    android:textAppearance="@style/mediumText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answerB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ellipsis"
                    android:onClick="answerSelected"
                    android:textAppearance="@style/mediumText" />

                <RadioButton
                    android:id="@+id/answerD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ellipsis"
                    android:onClick="answerSelected"
                    android:textAppearance="@style/mediumText" />

            </LinearLayout>

        </LinearLayout>

    </RadioGroup>

    <Button
        android:id="@+id/answerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="answerButton"
        android:text="@string/answer_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>